Changelog for ZoomX.

3.4.0-pl
==============
- Added support for file plugins.
- Added modifier "markdown".
- Added the ability to specify the caching time for snippets.
- Added the ability to use short controller names.
- Added short redirect format in routes.
- Added the "OnBeforeRouteProcess" event.
- Improved the function jsonx.
- Fixed a bug in the header name Content-Type for JSON requests.
- Refactored security functionality.

3.3.0-pl
==============
- Added route caching.
- Added multiple paths for snippets.
- Fixed a bug with unpublished resources (#3).

3.2.0-pl
==============
- Added modifier "fuzzyDate".
- Added modifier "dateAgo".
- Fixed a bug with the availability of the $zoomx object in templates (#1).
- Refactored the mechanism of virtual pages (#2).

3.1.0-beta
==============
- Added modifier "declension".
- Added the ability to use snippets as modifiers.
- Added the "source" parameter to the request info.

3.0.2-beta
==============
- Refactored the automatic content type detection.
- Fixed the parse block for Smarty.

3.0.1-beta
==============
- Added missing pdoTools adapter files.

3.0.0-beta
==============
*******************************************************************************************
*  WARNING! Only for a new installation. Do not update the previously installed version.  *
*******************************************************************************************
- Required PHP Version 7.1+.
- Added Smarty as a default parser.
- Added pdoTools adapter that replaces Fenom template engine with Smarty in pdoTools snippets.
- Added support for file elements (snippets and chunks).
- Added exception handler with trace details.
- Added the helper function "filex" for downloading files.
- Added the helper function "redirectx" for managing redirects.
- Added onZoomxInit event.
- Added the ability to extend the Service class using macros.
- Added Smarty security support.
- Particular virtual pages.

2.1.1-beta
==============