@@ -5,7 +5,8 @@ return [
         'file' => 'zoomx',
         'description' => '',
         'events' => [
-            'OnInitCulture' => ['priority' => -1000],
+//            'OnInitCulture' => ['priority' => -1000],
+            'OnMODXInit' => ['priority' => -1000],
             'OnSiteRefresh' => [],
             'OnCacheUpdate' => [],
         ],
