@@ -1,10 +1,10 @@
 <?php
 namespace Zoomx\Json;
 
-use Exception;
-use FastRoute\Dispatcher;
 use Zoomx\AliasRequestHandler;
+use Zoomx\DTO\Error as ErrorData;
 use Zoomx\Exceptions\HttpException;
+use Zoomx\Exceptions\NotFoundHttpException;
 use Zoomx\Service;
 
 class RequestHandler extends AliasRequestHandler
@@ -14,8 +14,6 @@ class RequestHandler extends AliasRequestHandler
      */
     public function process()
     {
-        //$this->clearRequestParam();
-
         if (zoomx()->getRoutingMode() !== Service::ROUTING_DISABLED) {
             $uri = $this->getRequestUri();
             $uri = $uri === '/' ? $uri : ltrim($uri, '/');
@@ -31,30 +29,9 @@ class RequestHandler extends AliasRequestHandler
      */
     public function processRouting($uri)
     {
-        $httpMethod = $_SERVER['REQUEST_METHOD'];
-        $routeInfo = $this->getDispatcher()->dispatch($httpMethod, $uri);
-        /** @var Response $response */
-        $response = $this->modx->response;
-        try {
-            switch ($routeInfo[0]) {
-                case Dispatcher::NOT_FOUND:
-                    abortx(404);
-                    break;
-                case Dispatcher::METHOD_NOT_ALLOWED:
-                    $exception = zoomx()->getExceptionClass(405);
-                    throw new $exception($routeInfo[1]);
-                    break;
-                case Dispatcher::FOUND:
-                    $result = call_user_func_array($this->getCallback($routeInfo[1]), $routeInfo[2]);
-                    $this->handleOutput($result);
-                    break;
-            }
-        } catch (HttpException $e) {
-            $response->setStatusCode($e->getStatusCode());
-            $response->setData($e->toArray())->headers->add($e->getHeaders());
-        } catch (Exception $e) {
-            $this->modx->log(MODX_LOG_LEVEL_ERROR, $e->getMessage());
-        }
+        $output = zoomx('router')->dispatch($uri);
+
+        $this->handleOutput($output);
     }
 
     /**
@@ -70,5 +47,45 @@ class RequestHandler extends AliasRequestHandler
         if (is_array($result)) {
             $this->modx->response->setData($result);
         }
+    }
+
+    /**
+     * @param ErrorData|array|null $error
+     * @throws \ReflectionException
+     * @throws \SmartyException
+     */
+    public function sendErrorPage($error = null)
+    {
+        if ($error === null) {
+            $class = zoomx()->getExceptionClass(404, NotFoundHttpException::class);
+            $exception = new $class();
+            $error = new ErrorData($exception->toArray());
+            $error->object = $exception;
+        } elseif (is_array($error)) {
+            $error = new ErrorData($error);
+        }
+
+        $this->invokeEvent($error);
+        $this->sendError($error);
+    }
+
+    protected function sendError(ErrorData $error)
+    {
+        while (ob_get_level() && @ob_end_clean()) {}
+        if (!XPDO_CLI_MODE) {
+            $response = $this->modx->response;
+            $response->setStatusCode($error->code);
+            $response->setData([
+                'code' => $error->code,
+                'title' => $error->title,
+                'message' => $error->message,
+            ]);
+            $headers = $error->object instanceof HttpException ? $error->object->getHeaders() : [500 => $_SERVER['SERVER_PROTOCOL'] . ' 500 Internal Server Error'];
+            $response->headers->add($headers);
+            $response->outputContent();
+        } else {
+            echo $error->title, "\n", $error->message, "\n";
+        }
+        exit();
     }
 }
